<resources>
    <string name="app_name">HentaiHub</string>
    <string name="intro">Hold on tight!</string>
    <string name="creator">Creator</string>
    <string name="my_name">R A V E N</string>
    <string name="doraemon">Doraemon</string>
    <string name="dbz">Dragon Ball</string>
    <string name="naruto">Naruto</string>
    <string name="tokyo_ghouls">Tokyo Ghouls</string>
    <string name="support">support</string>
    <string name="contact_us">Contact Us</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="random_spinner">Try Your Luck</string>
    <string name="share">SHARE</string>
    <string name="about">ABOUT</string>
    <string name="top_picks">TOP PICKS</string>
    <string name="manga">MANGA</string>
    <string name="hello_blank_fragment">Under Construction</string>

    <!-- TODO: Doraemon Section -->
    <string name="name">Doraemon</string>
    <string name="content">Doraemon is a Japanese manga series written and illustrated by Fujiko F. Fujio, the pen name of the duo Hiroshi Fujimoto and Motoo Abiko. The series has also been adapted into a successful anime series and media franchise.
    Doraemon is a robotic cat that comes from the 22nd century. He comes to 20th century and stays with Nobi Family. The Nobis love Doraemon very much. So Doraemon always help the Nobis with the devices from 22nd century.</string>

    <!-- TODO: Manga Section -->
    <string name="work">Work Under Development</string>
    <string name="making">We are working on something interesting, you will love it!</string>

    <!-- TODO: Contact Us Section -->
    <string name="contact_heading">Your Convenience Is Our Priority</string>
    <string name="email">Please enter your email here</string>
    <string name="feedback">Please enter your feedback here</string>
    <string name="favourite">Wanna mark as favourite?</string>
    <string name="liked_hentai">your favourite</string>
    <string name="liked_hentai_title">Liked Hentai</string>

    <!-- TODO: DBZ Section -->
    <string name="name_dbz">Dragon Ball Series</string>
    <string name="content_dbz">"Dragon Ball Z" follows the adventures of Goku who, along with the Z Warriors, defends the Earth against evil. The action adventures are entertaining and reinforce the concept of good versus evil. "Dragon Ball Z" teaches valuable character virtues such as teamwork, loyalty, and trustworthiness.</string>

    <!-- TODO: NARUTO Section -->
    <string name="name_naruto">Naruto Uzumaki</string>
    <string name="content_naruto">Naruto is a Japanese manga series written and illustrated by Masashi Kishimoto. It tells the story of Naruto Uzumaki, a young ninja who seeks to gain recognition from his peers and also dreams of becoming the Hokage, the leader of his village.</string>

    <!-- TODO: NARUTO Section -->
    <string name="name_tokyo">Tokyo Ghouls Season 1</string>
    <string name="content_tokyo">Tokyo Ghoul is a Japanese dark fantasy manga series written and illustrated by Sui Ishida.
        It was serialized in 2011 and September 2014, and it has been collected in fourteen tankōbon volumes as of August 2014</string>


    <string name="notification_title">Your Random Hentai Image Is Generating</string>
    <string name="notification_text">Hold on tight my friend, we are cooking something delicious for you!</string>

    <string name="intro_discription">Looking for hot Hentai Cartoon Porn Photos?
        Hentai Hub has free long tube photos of the hottest hentai and anime porno. Tons of pics, comics, and manga to watch. 100% free high quality!
        These asian anime porn Pics are really great
        young and innocent Anime girls, big tit moms,
        hot lesbian sex and funny random image picker!</string>

</resources>
